[package]
name = "orbyte"
version = "0.0.1"
edition = "2021"
authors = ["Ali Aghaahmadi <itsaliaghaahmadi@gmail.com>"]
description = "A serialization/deserialization library"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "macro", "rust"]
categories = ["development-tools", "parsing"]


[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.93"

[lib]
proc-macro = true
