[package]
name = "orbyte"
version = "0.0.2"
edition = "2021"
authors = ["Ali Aghaahmadi <itsaliaghaahmadi@gmail.com>"]
description = "A serialization/deserialization library"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "macro", "rust"]
categories = ["development-tools", "parsing"]


[dependencies]
orbyte_proc = { path = "orbyte_proc/." }
