[package]
name = "orbyte"
version = "0.0.6"
edition = "2021"
authors = ["Ali Aghaahmadi <itsaliaghaahmadi@gmail.com>"]
description = "A serialization/deserialization library"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "macro", "rust"]
categories = ["development-tools", "parsing"]

[features]
debug = ["orbyte_proc/debug"]

[dependencies]
orbyte_proc = { version = "0.0.3", path = "orbyte_proc/." }

[[example]]
name = "point"
path = "example/point.rs"

[[example]]
name = "message"
path = "example/message.rs"